--- a/templates/alumni-create.phtml
+++ b/templates/alumni-create.phtml
@@ -159,27 +159,11 @@
       </div>
     </div>
 
-	<div class="modal fade" tabindex="-1" role="dialog" id="error_modal">
-	  <div class="modal-dialog" role="document">
-		<div class="modal-content">
-		  <div class="modal-header">
-		    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		    <h4 class="modal-title">Error</h4>
-		  </div>
-		  <div class="modal-body">
-		    <div class="row">
-				<div class="col-lg-12">
-					<ul id="errors_list" style="color:red;">
-					</ul>
-				</div>
-			</div>
-		  </div>
-		  <div class="modal-footer">
-		    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		  </div>
-		</div><!-- /.modal-content -->
-	  </div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
-    
+	<!-- Success Modal -->
+	<?php include "components/success-modal.php"; ?>
+
+	<!-- Error Modal -->
+	<?php include "components/error-modal.php"; ?>
+
   </body>
 </html>
