--- a/templates/alumni.phtml
+++ b/templates/alumni.phtml
@@ -116,7 +116,9 @@
 						<td>Yes</td>
 						<?php endif; ?>
 						
-						<td><a class="btn btn-primary" href="<?=Helper::url('/alumni/'.$customer['id_customer'])?>">View</a></td>
+						<td>
+							<a class="btn btn-primary" href="<?=Helper::url('/alumni/'.$customer['id_customer'])?>">View</a>
+						</td>
 					</tr>
 					<?php endwhile; ?>
 					<?php endif; ?>
