--- a/templates/email-compose.phtml
+++ b/templates/email-compose.phtml
@@ -84,5 +84,11 @@
       </div>
     </div>
     
+	<!-- Success Modal -->
+	<?php include "components/success-modal.php"; ?>
+
+	<!-- Error Modal -->
+	<?php include "components/error-modal.php"; ?>
+
   </body>
 </html>
