--- a/templates/alumni-import.phtml
+++ b/templates/alumni-import.phtml
@@ -106,7 +106,14 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 			<h1 class="page-header">Import</h1>
+			
 			<div class="row">
+				<div class="col-lg-12">
+					<a class="btn btn-default" href="<?=Helper::url('/media/sample_data.csv')?>"><i class="fa fa-download"></i> Sample CSV import format</a>
+				</div>
+			</div>
+
+			<div class="row" style="margin-top:3%;">
 				<div class="col-lg-12">				
 					<i class="fa fa-spinner" id="spinner" aria-hidden="true"></i>
 
@@ -122,7 +129,7 @@
 			<h1 class="page-header" style="margin-top:3%;">Export</h1>
 			<div class="row" style="margin-top:2%;">
 				<div class="col-lg-12">
-					<a class="btn btn-success" href="<?=Helper::url('/api/v1/customer/export')?>">Export data <i class="fa fa-file"></i></a>
+					<a class="btn btn-success" href="<?=Helper::url('/api/v1/customer/export')?>"><i class="fa fa-file"></i> Export data</a>
 				</div>
 			</div>
           
