--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -419,9 +419,9 @@
 						<div class="panel-heading">User access token</div>
 						
 						<div class="panel-body">
-							<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>/token" method="POST">
+							<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>/token" method="POST" id="user_token_form">
 								<div class="form-group">
-									<input class="form-control" type="text" name="token" value="<?=$customer['token']?>" readonly />
+									<input class="form-control" type="text" name="token" value="<?=$customer['token']?>" readonly id="token_field" />
 								</div>
 								<div class="form-group">
 									<button class="btn btn-primary" type="submit">Generate new token</button>
