--- a/templates/email-compose.phtml
+++ b/templates/email-compose.phtml
@@ -52,7 +52,11 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
 			<!-- LHS Menu -->
-			<?php include "components/lhs-menu.php"; ?>
+			<ul class="nav nav-sidebar">
+				<li><a href="<?=Helper::url('/alumni')?>">Alumni</a></li>
+				<li><a href="<?=Helper::url('/alumni/import')?>">Import / Export</a></li>
+				<li class="active"><a href="<?=Helper::url('/email')?>">Email</a></li>
+			</ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">Compose</h1>
@@ -62,17 +66,17 @@
 			<div class="col-lg-12">
 				<form action="<?=Helper::url('/email')?>" method="POST">
 					<div class="form-group">
-						<input type="text" name="to" class="form-control" placeholder="To" 
+						<input type="text" name="to" class="form-control" placeholder="To" required pattern="^(\s?[^\s,]+@[^\s,]+\.[^\s,]+\s?,)*(\s?[^\s,]+@[^\s,]+\.[^\s,]+)$"
 						<?php if (isset($_GET['to'])): ?>
 							value="<?=$_GET['to']?>"
 						<?php endif; ?>
 						/>
 					</div>
 					<div class="form-group">
-						<input type="text" name="subject" class="form-control" placeholder="Subject" />
+						<input type="text" name="subject" class="form-control" placeholder="Subject" required />
 					</div>
 					<div class="form-group">
-						<textarea name="message" class="form-control" rows="9"></textarea>
+						<textarea name="message" class="form-control" rows="9" required ></textarea>
 					</div>
 					
 					<button type="submit" class="btn btn-primary">Send</button>
