--- a/templates/email-view.phtml
+++ b/templates/email-view.phtml
@@ -52,10 +52,14 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
 			<!-- LHS Menu -->
-			<?php include "components/lhs-menu.php"; ?>
+			<ul class="nav nav-sidebar">
+				<li><a href="<?=Helper::url('/alumni')?>">Alumni</a></li>
+				<li><a href="<?=Helper::url('/alumni/import')?>">Import / Export</a></li>
+				<li class="active"><a href="<?=Helper::url('/email')?>">Email</a></li>
+			</ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Compose</h1>
+          
           
           <!-- Content goes here -->
           <div class="row">
