--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -76,7 +76,7 @@
     
 			<div class="row" id="base_info">
 				<div class="col-lg-12">
-					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>" method="POST">
+					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>" method="POST" id="customer_update_form">
 						<div class="panel panel-default">
 							<div class="panel-heading">Base Info</div>
 							
@@ -90,18 +90,21 @@
 											<input type="text" class="form-control" id="first_name" name="first_name"
 												value = "<?=$customer_latest['first_name'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Email *</label>
 											<input type="text" class="form-control" id="email" name="email"
 												value = "<?=$customer_latest['email'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Major *</label>
 											<input type="text" class="form-control" id="major" name="major"
 												value = "<?=$customer_latest['major'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Gender *</label>
@@ -113,6 +116,7 @@
 													<?php if ($customer_latest['gender'] == 'female') echo "selected"; ?>
 												>female</option>
 											</select>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Type *</label>
@@ -124,12 +128,14 @@
 													<?php if ($customer_latest['type'] == 'current') echo "selected"; ?>
 												>current</option>
 											</select>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Preferred Mail Name *</label>
 											<input type="text" class="form-control" id="preferred_mail_name" name="preferred_mail_name"
 												value = "<?=$customer_latest['preferred_mail_name'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Home Street 1 *</label>
@@ -142,24 +148,28 @@
 											<input type="text" class="form-control" id="home_street_2" name="home_street_2"
 												value = "<?=$customer_latest['home_street_2'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>State *</label>
 											<input type="text" class="form-control" id="state" name="state"
 												value = "<?=$customer_latest['state'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Zipcode *</label>
 											<input type="text" class="form-control" id="zipcode" name="zipcode" data-mask="99999"
 												value = "<?=$customer_latest['zipcode'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Major year start *</label>
 											<input type="date" class="form-control" id="major_year_start" name="major_year_start"
 												value = "<?=$customer_latest['major_year_start'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										
 										<div class="form-group">
@@ -175,66 +185,77 @@
 											<input type="text" class="form-control" id="last_name" name="last_name"
 												value = "<?=$customer_latest['last_name'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Degree *</label>
 											<input type="text" class="form-control" id="degree" name="degree"
 												value = "<?=$customer_latest['degree'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>School *</label>
 											<input type="text" class="form-control" id="school" name="school"
 												value = "<?=$customer_latest['school'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Birthday *</label>
 											<input type="date" class="form-control" id="birthday" name="birthday"
 												value = "<?=$customer_latest['birthday'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Salutation *</label>
 											<input type="text" class="form-control" id="salutation" name="salutation"
 												value = "<?=$customer_latest['salutation'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Active *</label>
 											<input type="checkbox" class="form-control" id="active" name="active"
 												<?php if ($customer_latest['active']) echo "checked"; ?>
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Country *</label>
 											<input type="text" class="form-control" id="country" name="country"
 												value = "<?=$customer_latest['country'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>City *</label>
 											<input type="text" class="form-control" id="city" name="city"
 												value = "<?=$customer_latest['city'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Home Number</label>
 											<input type="text" class="form-control" id="home_number" name="home_number"
 												value = "<?=$customer_latest['home_number'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Phone Number *</label>
 											<input type="text" class="form-control" id="phone_number" name="phone_number"
 												value = "<?=$customer_latest['phone_number'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group">
 											<label>Major year end *</label>
 											<input type="date" class="form-control" id="major_year_end" name="major_year_end"
 												value = "<?=$customer_latest['major_year_end'] ?>"
 											/>
+											<span class="help-block"></span>
 										</div>
 										
 									</div> <!-- col-lg-6 -->
@@ -371,7 +392,7 @@
 									<div class="col-lg-6">
 										<div class="form-group">
 											<label>New Note *</label>
-											<textarea class="form-control" rows="5" name="note" placeholder="Add new note..."></textarea>
+											<textarea class="form-control" rows="5" name="note" placeholder="Add new note..." required></textarea>
 										</div>
 										
 										<div class="form-group">
