Alumni work information, error messages updatd.

--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -315,60 +315,70 @@
 											<input type="text" class="form-control" id="work_title" name="title"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>Address Line 1 *</label>
 											<input type="text" class="form-control" id="work_address_line1" name="address_line1"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>Address Line 2 *</label>
 											<input type="text" class="form-control" id="work_address_line2" name="address_line2"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>City *</label>
 											<input type="text" class="form-control" id="work_city" name="city"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>State *</label>
 											<input type="text" class="form-control" id="work_state" name="state"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>Country *</label>
 											<input type="text" class="form-control" id="work_country" name="country"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>Zipcode *</label>
 											<input type="text" class="form-control" id="work_zipcode" name="zipcode"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>Field *</label>
 											<input type="text" class="form-control" id="work_field" name="field"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>Date Start *</label>
 											<input type="date" class="form-control" id="work_date_start" name="date_start"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<label>Date End *</label>
 											<input type="date" class="form-control" id="work_date_end" name="date_end"
 												
 											/>
+											<span class="help-block"></span>
 										</div>
 										<div class="form-group col-lg-6">
 											<button type="submit" class="btn btn-primary">Add position</button>
