--- a/templates/alumni-create.phtml
+++ b/templates/alumni-create.phtml
@@ -25,6 +25,12 @@
 
 	<script src="<?=Helper::url('/media/js/global.js')?>"></script>
 
+	<style>
+		div.form-group {
+			min-height: 95px;
+		}
+	</style>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -58,26 +64,32 @@
 							<div class="form-group col-lg-6">
 								<label>First Name *</label>
 								<input type="text" class="form-control" id="first_name" name="first_name"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Last Name *</label>
 								<input type="text" class="form-control" id="last_name" name="last_name"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Email *</label>
 								<input type="text" class="form-control" id="email" name="email"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Degree *</label>
 								<input type="text" class="form-control" id="degree" name="degree"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Major *</label>
 								<input type="text" class="form-control" id="major" name="major"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>School *</label>
 								<input type="text" class="form-control" id="school" name="school"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Type *</label>
@@ -85,6 +97,7 @@
 									<option value="alumni">Alumni</option>
 									<option value="current">Current</option>
 								</select>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Gender *</label>
@@ -92,38 +105,47 @@
 									<option value="male">Male</option>
 									<option value="female">Female</option>
 								</select>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Salutation *</label>
 								<input type="text" class="form-control" id="salutation" name="salutation"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Preferred Mail Name *</label>
 								<input type="text" class="form-control" id="preferred_mail_name" name="preferred_mail_name"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Birthday *</label>
 								<input type="date" class="form-control" id="birthday" name="birthday"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Active</label>
 								<input type="checkbox" class="form-control" id="active" name="active" value="true"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Home Street 1 *</label>
 								<input type="text" class="form-control" id="home_street_1" name="home_street_1"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Home Street 2</label>
 								<input type="text" class="form-control" id="home_street_2" name="home_street_2"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Country *</label>
 								<input type="text" class="form-control" id="country" name="country"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>City *</label>
 								<input type="text" class="form-control" id="city" name="city"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>State *</label>
@@ -132,22 +154,27 @@
 							<div class="form-group col-lg-6">
 								<label>Zipcode *</label>
 								<input type="text" class="form-control" id="zipcode" name="zipcode" pattern="[0-9]{5}" title="5 digit zipcode"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Home Number</label>
 								<input type="text" class="form-control" id="home_number" name="home_number"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Phone Number *</label>
 								<input type="text" class="form-control" id="phone_number" name="phone_number"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Major year start *</label>
 								<input type="date" class="form-control" id="major_year_start" name="major_year_start"/>
+								<span class="help-block"></span>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Major year end *</label>
 								<input type="date" class="form-control" id="major_year_end" name="major_year_end"/>
+								<span class="help-block"></span>
 							</div>
 							
 							<div class="form-group col-lg-6">
