User update token email complete.

--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -462,7 +462,7 @@
 									<button class="btn btn-primary" type="submit">Generate new token</button>
 								</div>
 								<div class="form-group">
-									<a class="btn btn-default" href="#"><i class="fa fa-envelope"></i> Send user update email</a>
+									<a class="btn btn-default" href="<?=Helper::url('/email/token/'.$customer['id_customer'])?>"><i class="fa fa-envelope"></i> Send user update email</a>
 								</div>
 							</form>
 						</div>
