--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -61,6 +61,7 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
+			<?php if (Helper::is_login()): ?>
 			<div class="row" style="margin-bottom:2%;">
 				<div class="col-lg-12">
 				<?php if ($customer['no_contact']): ?>
@@ -73,6 +74,7 @@
 
 				</div>
 			</div>
+			<?php  endif; ?>
     
 			<div class="row" id="base_info">
 				<div class="col-lg-12">
@@ -96,6 +98,9 @@
 											<label>Email *</label>
 											<input type="text" class="form-control" id="email" name="email"
 												value = "<?=$customer_latest['email'] ?>"
+											<?php if (!Helper::is_login()): ?>
+												readonly
+											<?php endif; ?>
 											/>
 											<span class="help-block"></span>
 										</div>
@@ -103,6 +108,9 @@
 											<label>Major *</label>
 											<input type="text" class="form-control" id="major" name="major"
 												value = "<?=$customer_latest['major'] ?>"
+											<?php if (!Helper::is_login()): ?>
+												readonly
+											<?php endif; ?>
 											/>
 											<span class="help-block"></span>
 										</div>
@@ -191,6 +199,9 @@
 											<label>Degree *</label>
 											<input type="text" class="form-control" id="degree" name="degree"
 												value = "<?=$customer_latest['degree'] ?>"
+											<?php if (!Helper::is_login()): ?>
+												readonly
+											<?php endif; ?>
 											/>
 											<span class="help-block"></span>
 										</div>
@@ -198,6 +209,9 @@
 											<label>School *</label>
 											<input type="text" class="form-control" id="school" name="school"
 												value = "<?=$customer_latest['school'] ?>"
+											<?php if (!Helper::is_login()): ?>
+												readonly
+											<?php endif; ?>
 											/>
 											<span class="help-block"></span>
 										</div>
@@ -219,6 +233,9 @@
 											<label>Active *</label>
 											<input type="checkbox" class="form-control" id="active" name="active"
 												<?php if ($customer_latest['active']) echo "checked"; ?>
+											<?php if (!Helper::is_login()): ?>
+												readonly
+											<?php endif; ?>
 											/>
 											<span class="help-block"></span>
 										</div>
@@ -266,6 +283,8 @@
 							
 						</div> <!-- base info -->
 					</form>
+					
+					<?php if (Helper::is_login()): ?>
 					
 					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer']).'/work' ?>" method="POST" id="work_form">
 						<div class="panel panel-default">
@@ -390,7 +409,6 @@
 								
 						</div>
 					</form>
-
 					
 					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>/note" method="POST" id="add_note">
 						<div class="panel panel-default">
@@ -445,8 +463,13 @@
 								
 						</div>
 					</form>
+					
+					<?php endif; ?>
+					
 				</div>
 			</div>
+        
+			<?php if (Helper::is_login()): ?>
         
 			<div class="row" id="uat">
 				<div class="col-lg-12">
@@ -469,6 +492,8 @@
 					</div>
 				</div>
 			</div>
+			
+			<?php endif; ?>
         
         </div>
       </div>
